# tkucli

./: .gitignore  LICENSE  README.md  TERMS_OF_USE.md  mmd.mjs  project-ai.md
ai-skills/: tkucli.md
examples/example-root-resource-subresource/: Cargo.toml  cli.toml
examples/example-root-resource-subresource/src/handlers/: root.rs  vm.rs
examples/example-spinner-for-cmd-tui/: Cargo.toml  cli.toml
examples/example-spinner-for-cmd-tui/src/: main.rs
src/: Cargo.toml  README.md  renaming_plan.md
src/tku-codegen/: Cargo.toml
src/tku-codegen/src/: generator.rs  lib.rs  validator.rs
src/tku-core/: Cargo.toml
src/tku-core/src/: context.rs  error.rs  extract.rs  handler.rs  lib.rs  middleware.rs  output.rs  progress.rs  router.rs  schema.rs
src/tku-macros/: Cargo.toml
src/tku-macros/src/: lib.rs
src/tku-tui/: Cargo.toml
src/tku-tui/src/: app.rs  events.rs  extension.rs  lib.rs  screen.rs  theme.rs  widgets.rs
src/tku-tui/src/profile/: coder.rs  default.rs  mod.rs
src/tku-tui/src/screen/: coder.rs  default.rs  mod.rs  shared.rs  utility.rs
src/tkucli/: Cargo.toml
src/tkucli/src/: main.rs
src/tkucli/src/commands/: build.rs  check.rs  init.rs  mod.rs  new.rs
tests/example-root-resource-subresource/: Cargo.toml  build.rs  cli.toml
tests/example-root-resource-subresource/src/: main.rs
tests/example-root-resource-subresource/src/handlers/: mod.rs  vm_disk.rs
tests/example-spinner-for-cmd-tui/: Cargo.toml  build.rs  cli.toml
tests/example-spinner-for-cmd-tui/src/: main.rs  shell.rs
tests/example-spinner-for-cmd-tui/src/handlers/: vm.rs
