[package]
name        = "tku-codegen"
description = "Build-time code generator for tkucli: reads AppSchema, emits Rust source"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true

[dependencies]
tku-core              = { path = "../tku-core" }
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true
prettyplease.workspace = true
serde.workspace       = true
toml.workspace        = true
thiserror.workspace   = true
anyhow.workspace      = true
