[package]
name        = "tku-core"
description = "Core runtime for tkucli: router, middleware, output engine, handler traits"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tku-core"
readme = "../README.md"
rust-version.workspace = true
keywords = ["cli", "framework", "codegen", "tui", "rust"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
anyhow.workspace      = true
clap.workspace        = true
tabled.workspace      = true
indicatif.workspace   = true
tracing.workspace     = true
async-trait.workspace = true
toml.workspace        = true
cliclack.workspace    = true
