[package]
name        = "tku-macros"
description = "Proc-macro helpers for tkucli: #[tku::handler], tku::register!()"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tku-macros"
readme = "../README.md"
rust-version.workspace = true
keywords = ["cli", "macros", "proc-macro", "codegen", "rust"]
categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true
