[package]
name        = "tku-macros"
description = "Proc-macro helpers for tkucli: #[tku::handler], tku::register!()"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace       = true
syn.workspace         = true
