[package]
name        = "tkucli"
description = "The `tkucli` developer tool: new, build, check, init"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true

[[bin]]
name = "tkucli"
path = "src/main.rs"

[dependencies]
tku-core              = { path = "../tku-core" }
tku-codegen           = { path = "../tku-codegen" }
clap.workspace        = true
tokio.workspace       = true
serde.workspace       = true
toml.workspace        = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
tracing-subscriber.workspace = true
