[package]
name        = "tkucli"
description = "The `tkucli` developer tool: new, build, check, init"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../README.md"
rust-version.workspace = true
keywords = ["cli", "framework", "generator", "tui", "rust"]
categories = ["command-line-interface", "development-tools"]

[[bin]]
name = "tkucli"
path = "src/main.rs"

[dependencies]
tku-core              = { version = "0.1.0", path = "../tku-core" }
tku-codegen           = { version = "0.1.0", path = "../tku-codegen" }
clap.workspace        = true
tokio.workspace       = true
serde.workspace       = true
toml.workspace        = true
anyhow.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
tracing-subscriber.workspace = true
